Funções de Obter Parâmetro do Sistema e Perfil do Sistema

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1278,3 +1278,6 @@ getParam=Get param from request
 getParamDescription=Function to get param from request
 applicationClassesFolder=Application classes folder
 applicationClassesFolderDescription=Function to return the path of the application classes folder.
+getSystemParam=Get System Parameter
+getSystemParamKey=Parameter Key
+getSystemProfile=Get System Profile
