--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1292,3 +1292,6 @@ convertLongToDateDescription=Function that convert a milliseconds(Long) to date
 getSystemParam=Get System Parameter
 getSystemParamKey=Parameter Key
 getSystemProfile=Get System Profile
+updateDate=Update date
+functionToUpdateDate=Function to update an date
+millisecond=millisecond
