--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1349,3 +1349,7 @@ convert=Converter
 convertValue=valor
 convertTo=para
 convertDescription=Converte valores entre diferentes tipos
+zipFile=Compactar arquivo
+functionToZipFile=Função para compactar arquivo
+fileList=Lista de arquivos
+fileNameToZip=Nome do arquivo compactado
