CRONAPP-935 - Tratando mensagem de erro de optimistic locking

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1357,4 +1357,5 @@ convertDescription=Converts values between different types
 zipFile=Zip file
 functionToZipFile=Function to zip file
 fileList=File list
-fileNameToZip=Zip file name
+fileNameToZip=Zip file 
+optimisticLockingError=Cannot be updated because it has changed or been deleted since it was last read. Please, input the correct version and try again.
