--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1353,3 +1353,4 @@ zipFile=Compactar arquivo
 functionToZipFile=Função para compactar arquivo
 fileList=Lista de arquivos
 fileNameToZip=Nome do arquivo compactado
+optimisticLockingError=A linha não pode ser atualizada porque foi alterada ou excluída desde a última leitura. Por favor, insira a versão correta e tente novamente.
