CRONAPP-1005 - Função de Log Auditoria

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1326,6 +1326,11 @@ WARNING=Warning
 CONFIG=Config
 logMessage=Log Message: Text You Want to Log.
 logDetail=Log Detail: Can be a text or an exception object (error).
+audit=Log Audit
+auditType=Type: Audit Type. Ex: Blockly Name
+auditCommand=Command: Excuted Command. Ex: CreateOrder
+auditCategory=Category: Audit category. Ex: Trace, Blockly, Entity, Query etc
+auditData=Data: Audit Data. Ex: object, text etc
 textReplaceFunction=Replace
 textReplaceDescription=Replaced the past text
 textReplace=Original text
