--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1321,6 +1321,11 @@ WARNING=Aviso
 CONFIG=Configuração
 logMessage=Mensagem de log: Texto que deseja logar.
 logDetail=Detalhe de log: Pode ser um texto ou um objeto de exceção (erro).
+audit=Auditar em Log
+auditType=Tipo: Tipo de auditoria. Ex: Nome do Bloco
+auditCommand=Comando: Comando executado. Ex: CriouFolha
+auditCategory=Categoria: Categoria da auditoria. Ex: Trace, Blockly, Entity, Query etc
+auditData=Dados: Dados da auditoria. Ex: objeto, texto etc
 textReplaceFunction=Substituir
 textReplaceDescription=Uma nova string substituído o texto passado
 textReplace=Texto original
