CRONAPP-1020 - Novo bloco de query nativa

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1364,3 +1364,7 @@ functionToZipFile=Function to zip file
 fileList=File list
 fileNameToZip=Zip file 
 optimisticLockingError=Cannot be updated because it has changed or been deleted since it was last read. Please, input the correct version and try again.
+datasourceExecuteNativeQuery=Open database native query
+functionToExecuteNativeQuery=Function to retrieve data from database using native query
+datasourceExecuteNativeQueryUpdate=Open database native query for update
+functionToExecuteNativeQueryUpdate=Function to update data from database using native query
