--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1379,3 +1379,6 @@ datasourceExecuteNativeQuery=Abrir consulta nativa
 functionToExecuteNativeQuery=Função para realizar consultas no banco de dados de forma nativa
 datasourceExecuteNativeQueryUpdate=Abrir instrução SQL nativa
 functionToExecuteNativeQueryUpdate=Função para realizar atualizações no banco de dados de forma nativa
+textNormalizeFunction=Normalizar
+textNormalizeDescription=Transforma o texto permitindo uma classificação e pesquisa mais fáceis do texto.
+nonNormalizedText=Texto não normalizado
