[CRONAPP-1189]-Correção para poc, quando o campo não existe na entidade

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1391,3 +1391,4 @@ textStartsWithFunction=Text starts with
 textStartsWithDescription=Tests if the specified text starts with the specified prefix.
 textStarts=Text
 prefixStartsWith=Prefix
+fieldpath=The field was not found in the table.
