CRONAPP-1345 - Novas funções de arquivo e cabeçalho de requisiçao

--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1387,3 +1387,16 @@ textStartsWithDescription=Verifica se o texto expecificado começa com o prefixo
 textStarts=Texto
 prefixStartsWith=Prefixo
 fieldpath=O campo não foi localizado na tabela
+getHeader=Get header from request
+getHeaderDescription=Function to get header from request
+getToken=Obter token da reuisição
+getTokenDescription=Função para obter token da requisição
+getFileName=Obter nome do arquivo
+getFileNameDescription=Obtém o nome do arquivo de um caminho
+getFileParent=Obter pasta pai
+getFileParentDescription=Obtém a pasta de um arquivo
+fileName=Nome do Arquivo
+getFileExtension=Obter Extensão
+getFileExtensionDescription=Obtém extensão de um arquivo
+toFile=Criar nome de arquivo
+toFileDescription=Cria um novo caminho de arquivo baseado em uma pasta e um nome. Ex: /opt/test, file.txt
