CRONAPP-1345 - Correções diversas na IDE e Frameworks

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1403,5 +1403,5 @@ getFileParentDescription=Get a parent folder of a given file
 fileName=File Name
 getFileExtension=Get File Extension
 getFileExtensionDescription=Get file extension of a given file
-toFile=Create file name
-toFileDescription=Creates a new File path from a parent pathname and a child pathname string. Ex: /opt/test, file.txt
+toFile=Get file name path
+toFileDescription=Get a new File path from a parent pathname and a child pathname string. Ex: /opt/test, file.txt
