--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -996,6 +996,7 @@ CategoryType.TREE=Tree
 CategoryType.JSONORMAP=Json and Map
 CategoryType.SCREEN=Form
 CategoryType.OBJECT=Object
+CategoryType.REGEX=Regular Expression
 functionToExecuteQuery=Function excute query JPQL 
 DATASOURCE_INVALID_QUERY=JPQL instruction was invalid: {0}
 accessDenied=Access Denied
@@ -1405,3 +1406,12 @@ getFileExtension=Get File Extension
 getFileExtensionDescription=Get file extension of a given file
 toFile=Get file name path
 toFileDescription=Get a new File path from a parent pathname and a child pathname string. Ex: /opt/test, file.txt
+text=Text
+regex=Regular Expression
+flag=Flag
+flags=Flags
+flagRegexError=Invalid flag
+extractTextWithRegex=Extract text with Reg. Expression
+extractTextWithRegexDescription=Function to extract text with Reg. Expression. Returns a list with incidences, if found
+validateTextWithRegex=Validate text with Reg. Expression
+validateTextWithRegexDescription=Function to validate text with Reg. Expression. Returns a list with incidences, if found
