CRONAPP-2133 [OXITENO] Executar procedures de forma low-code

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1431,3 +1431,8 @@ namespace=Namespace
 procedureName=Procedure name
 parameterList=Parameter list
 returnClass=Return class
+parameterMap=Parameter Map
+paramteterListTypes=List of parameter types
+paramteterListModes=List of modes types
+executeProcedureWithInOut=Execute procedure with IN and/or OUT
+executeProcedureWithInOutDescription=Run a procedure that contains IN and/or OUT parameters 
