--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -1420,9 +1420,14 @@ cnpj=CNPJ
 validateEmail=Validar e-mail
 validateEmailDescription=Função para validar e-mail. Retorna verdadeiro se o e-mail for válido ou falso caso seja inválido.
 email=E-mail
-executeProcedureReturnTable=Executar procedimento retornando dados
+executeProcedureReturnTable=Executar procedure retornando dados
 executeProcedureReturnTableDescription=Executar uma procedure que retorne uma lista de dados
 namespace=Namespace
 procedureName=Nome do procedimento
 parameterList=Lista de paramêtros
 returnClass=Classe de retorno
+parameterMap=Mapa de paramêtros
+paramteterListTypes=Lista de tipos de paramêtros
+paramteterListModes=Lista de tipos de Modos
+executeProcedureWithInOut=Executar procedure com IN e/ou OUT
+executeProcedureWithInOutDescription=Executar uma procedure que contenha parametros de IN e/ou OUT 
