--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -950,3 +950,12 @@ year=Year
 yearsToIncrement=Years an increment
 yes=Yes
 zipFile=Zip file
+getTokenClaim=Get Request Token Data
+getTokenClaimDescription=It allows obtaining information from the Request Token, passing a key
+getTokenClaimKey=Key
+getTokenClaims=Get Request Token Data Map
+getTokenClaimsDescription=Function to obtain Request Token Data Map
+addTokenClaim=Adds Data to the Request Token
+addTokenClaimDescription=Function that adds Data to the Request Token. It must be used in the On Logon event on server
+addTokenClaimKey=Key
+addTokenClaimValue=Value
