--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -947,3 +947,12 @@ year=Ano
 yearsToIncrement=Anos a incrementar
 yes=Sim
 zipFile=Compactar arquivo
+getTokenClaim=Obter Variável do Token da Requisição
+getTokenClaimDescription=Permite obter informações do Token da Requisiçao, passando uma chave
+getTokenClaimKey=Chave
+getTokenClaims=Obter Mapa de Dados do Token da Requisição
+getTokenClaimsDescription=Função para obter Mapa de Dados do Token da Requisição
+addTokenClaim=Definir Variável de Token da Requisição
+addTokenClaimDescription=Função que adiciona Dados ao Token da Requisição.
+addTokenClaimKey=Chave
+addTokenClaimValue=Valor
