CRONAPP-2734 - Função mudar/obter expiração do Token

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -959,3 +959,8 @@ addTokenClaim=Define the Request Token Variable
 addTokenClaimDescription=Function that adds Data to the Request Token.
 addTokenClaimKey=Key
 addTokenClaimValue=Value
+getTokenExpiration=Get Token Expiration
+getTokenExpirationDescription=Get Expiration Date of the Request Token
+setTokenExpiration=Set Token Expiration
+setTokenExpirationDescription=Function to set expiration date of the request token
+setTokenExpirationParam=Expiration Date: token expiration date
