--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -956,3 +956,8 @@ addTokenClaim=Definir Variável de Token da Requisição
 addTokenClaimDescription=Função que adiciona Dados ao Token da Requisição.
 addTokenClaimKey=Chave
 addTokenClaimValue=Valor
+getTokenExpiration=Obter Expiração do Token
+getTokenExpirationDescription=Obtém data de expiração do Token da Requisição
+setTokenExpiration=Definir Expiração do Token
+setTokenExpirationDescription=Função para definir data de expiração do token da requisição
+setTokenExpirationParam=Data de Expiração: data de expiração do token
