CRONAPP-2791 Flush extra na função Inserir do Bloco gera Locks eternos no banco

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -18,7 +18,12 @@ addLongName=Return the values added
 addLongParam0=Variables to add: Long values to add
 addressOfTheServerBlockDocumentation=http://cronapi-docs.readthedocs.io/pt/develop/cronapi.io/server/${nameMethod}.html
 addText=Text: Text to be added. Example: "TextToBeAddedIntoFile".
+addTokenClaim=Define the Request Token Variable
+addTokenClaimDescription=Function that adds Data to the Request Token.
+addTokenClaimKey=Key
+addTokenClaimValue=Value
 all=All
+always=Always
 app_json=JSON
 appendDescription=Function that concatenate strings and return a concatenated string
 appendName=Concatenate string
@@ -280,6 +285,7 @@ flags=Flags
 floorFunctionDescription=Function that return the larger round value
 floorFunctionName=Return the larger round value
 floorFunctionParam0=Value to round: Value base to round up
+flushMode=Flush Mode
 flushTransaction=Flush Transaction
 flushTransactionDescription=Function to flush transaction.
 folder=Folder
@@ -468,7 +474,14 @@ getSystemParam=Get System Parameter
 getSystemParamKey=Parameter Key
 getSystemProfile=Get System Profile
 getToken=Get token from request
+getTokenClaim=Get Request Token Variable
+getTokenClaimDescription=It allows obtaining information from the Request Token, passing a key
+getTokenClaimKey=Key
+getTokenClaims=Get Request Token Data Map
+getTokenClaimsDescription=Function to obtain Request Token Data Map
 getTokenDescription=Function to get token from request
+getTokenExpiration=Get Token Expiration
+getTokenExpirationDescription=Get Expiration Date of the Request Token
 getURLFromOthersDescription=Function that do a request into a URL and get the content result
 getURLFromOthersName=Get URL content
 getUserRoles= Get user roles.
@@ -648,6 +661,7 @@ ObjectType.STRING=String
 ObjectType.UNKNOWN=Unknown
 ObjectType.VOID=Void
 ObjectType.XML=Xml
+onCommit=On Commit
 openFileToRead=Open file to reading
 openFileToWrite=Open file to writing
 openFTPConnection=Open FTP connection
@@ -672,6 +686,7 @@ pathOfFile=Path of the file: Example: TEMPORARY_FOLDER/myFile.txt
 pathOfFolder=Folder path: Example TEMPORARY_FOLDER/myFolderName
 pathOfFolderFTP=FTP path: Folder path FTP
 pathOfSourceFile=Destination: Fully File source path. Example: /MyFolder/MyFile.txt
+persistenceUnit=Persistence Unit
 PIFunctionDescription=Function that return the PI value in double
 PIFunctionName=Return the PI value
 polarArea=Polar Area
@@ -728,9 +743,6 @@ secondsToIncrement=Seconds to increase
 sendEmailDescription=Function that send a e-mail
 sendEmailName=Send e-mail
 sendEmailParam0=From
-sendEmailParam10=Login: Login to autenticate on SMTP host
-sendEmailParam11=Password: Password to autenticate on SMTP host
-sendEmailParam12=Protocol:Protocol for sending email through SMTP.
 sendEmailParam1=To: Can receive a single text or a text list
 sendEmailParam2=Copy to: Can receive a single text or a text list
 sendEmailParam3=Blind Copy to :Can receive a single text or a text list
@@ -740,10 +752,15 @@ sendEmailParam6=HTML content:Send a message with the HTML content
 sendEmailParam7=Attachment(s): Absolute path of attachment, or a list with absolute paths
 sendEmailParam8=SMTP Host
 sendEmailParam9=SMTP Port
+sendEmailParam10=Login: Login to autenticate on SMTP host
+sendEmailParam11=Password: Password to autenticate on SMTP host
+sendEmailParam12=Protocol:Protocol for sending email through SMTP.
 sendEmailSmtp=Send mail using SMTP
 sendEmailSmtpWithDigitalCertificate=Send mail using SMTP and digital certificate
 senderMail=Sender email
 sendFTPCommand=Send FTP command
+setFlushMode=Set Flush Transaction Data
+setFlushModeDescription=Function to Set Flush Transaction Data
 setInSession=Add or set value in session
 setInSessionDescription=Put or set value in session by name
 setJsonOrMapField=Set value in Json
@@ -765,6 +782,9 @@ setObjectFieldParam2=Value to be setted on object
 setPassiveModeFTP=Set FTP connection to passive mode
 setReturn=Return
 setReturnDescription=Function to include a "return" in the code.
+setTokenExpiration=Set Token Expiration
+setTokenExpirationDescription=Function to set expiration date of the request token
+setTokenExpirationParam=Expiration Date: token expiration date
 SEVERE=Severe
 shellExecuteDescription=Function that execute a command line and return error (if exists)
 shellExecuteName=Execute a command line
@@ -950,17 +970,3 @@ year=Year
 yearsToIncrement=Years an increment
 yes=Yes
 zipFile=Zip file
-getTokenClaim=Get Request Token Variable
-getTokenClaimDescription=It allows obtaining information from the Request Token, passing a key
-getTokenClaimKey=Key
-getTokenClaims=Get Request Token Data Map
-getTokenClaimsDescription=Function to obtain Request Token Data Map
-addTokenClaim=Define the Request Token Variable
-addTokenClaimDescription=Function that adds Data to the Request Token.
-addTokenClaimKey=Key
-addTokenClaimValue=Value
-getTokenExpiration=Get Token Expiration
-getTokenExpirationDescription=Get Expiration Date of the Request Token
-setTokenExpiration=Set Token Expiration
-setTokenExpirationDescription=Function to set expiration date of the request token
-setTokenExpirationParam=Expiration Date: token expiration date
