--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -18,7 +18,12 @@ addLongName=Retorna os valores adicionados
 addLongParam0=Variáveis para adicionar: Variáveis Long para serem adicionadas
 addressOfTheServerBlockDocumentation=http://cronapi-docs.readthedocs.io/pt/develop/cronapi.io/server/${nameMethod}.html
 addText=Texto: Texto a ser adicionado. Exemplo: "textoParaAdicionar"
+addTokenClaim=Definir Variável de Token da Requisição
+addTokenClaimDescription=Função que adiciona Dados ao Token da Requisição.
+addTokenClaimKey=Chave
+addTokenClaimValue=Valor
 all=Todos
+always=Sempre
 app_json=JSON
 appendDescription=Função que concatena Strings e retorna a String concatenada
 appendName=Concatena string
@@ -279,6 +284,7 @@ flags=Flags
 floorFunctionDescription=Função que retorna o maior valor arredondado
 floorFunctionName=Retorna o maior valor arredondado
 floorFunctionParam0=Valor para arredondar: Valor base para arredondar para o maior valor
+flushMode=Modo de Descarga
 flushTransaction=Flush da Transação
 flushTransactionDescription=Função para flush da transação.
 folder=Pasta
@@ -467,7 +473,14 @@ getSystemParam=Obter Parâmetro do Sistema
 getSystemParamKey=Chave do Parâmetro
 getSystemProfile=Obter Perfil do Sistema
 getToken=Obter token da requisição
+getTokenClaim=Obter Variável do Token da Requisição
+getTokenClaimDescription=Permite obter informações do Token da Requisiçao, passando uma chave
+getTokenClaimKey=Chave
+getTokenClaims=Obter Mapa de Dados do Token da Requisição
+getTokenClaimsDescription=Função para obter Mapa de Dados do Token da Requisição
 getTokenDescription=Função para obter token da requisição
+getTokenExpiration=Obter Expiração do Token
+getTokenExpirationDescription=Obtém data de expiração do Token da Requisição
 getURLFromOthersDescription=Função que realiza uma requisição à uma URL e obtém o conteúdo de resposta
 getURLFromOthersName=Obter conteúdo da URL
 getUserRoles= Obter lista de perfil.
@@ -644,6 +657,7 @@ ObjectType.STRING=Texto
 ObjectType.UNKNOWN=Desconhecido
 ObjectType.VOID=Sem retorno
 ObjectType.XML=Xml
+onCommit=Ao comitar
 openFileToRead=Abrir arquivo para leitura
 openFileToWrite=Abrir arquivo para escrita
 openFTPConnection=Abrir conexão FTP
@@ -668,6 +682,7 @@ pathOfFile=Caminho do arquivo: Exemplo: PASTA_TEMPORARIA/MeuArquivo.txt
 pathOfFolder=Caminho: Caminho completo, exemplo PASTA_TEMPORARIA/minhaPasta
 pathOfFolderFTP=Caminho FTP: Caminho da pasta no FTP
 pathOfSourceFile=Caminho de origem: Caminho completo de origem do arquivo. Exemplo: /MinhaPasta/MeuArquivo.txt
+persistenceUnit=Unidade de persistência
 PIFunctionDescription=Função que retorna o valor de PI em double
 PIFunctionName=Retorna o valor de PI
 polarArea=Área polar
@@ -724,9 +739,6 @@ secondsToIncrement=Segundos a incrementar
 sendEmailDescription=Função que envia e-mail
 sendEmailName=Envia e-mail
 sendEmailParam0=De
-sendEmailParam10=Login: Login para autenticação no hospedeiro SMTP
-sendEmailParam11=Senha: Senha para autenticação no hospedeiro SMTP
-sendEmailParam12=Protocolo:Tipo de protocolo para envio de e-mail no SMTP.
 sendEmailParam1=Para: Pode receber um único ou uma lista de destinatários
 sendEmailParam2=Com cópia: Um único campo texto ou uma lista de destinatários
 sendEmailParam3=Com cópia oculta: Um único campo texto ou uma lista de textos
@@ -736,10 +748,15 @@ sendEmailParam6=Conteúdo HTML:Envia mensagem com o conteúdo do HTML
 sendEmailParam7=Anexo(s): Caminho absoluto do anexo, ou lista com caminhos dos anexos
 sendEmailParam8=Hospedeiro SMTP
 sendEmailParam9=Porta SMTP
+sendEmailParam10=Login: Login para autenticação no hospedeiro SMTP
+sendEmailParam11=Senha: Senha para autenticação no hospedeiro SMTP
+sendEmailParam12=Protocolo:Tipo de protocolo para envio de e-mail no SMTP.
 sendEmailSmtp=Enviar email usando SMTP
 sendEmailSmtpWithDigitalCertificate=Enviar email usando SMTP e certificado digital
 senderMail=Email do remetente
 sendFTPCommand=Enviar comando FTP
+setFlushMode=Definir Modo de Descarga Dados da Transação
+setFlushModeDescription=Função para Definir Modo de Descarga Dados da Transação
 setInSession=Inserir ou alterar valor na sessão
 setInSessionDescription=Função que insere ou altera valor na sessão passando o nome do campo e o valor
 setJsonOrMapField=Definir valor no Json
@@ -761,6 +778,9 @@ setObjectFieldParam2=Valor a ser definido no objeto
 setPassiveModeFTP=Definir conexão FTP para o modo passivo
 setReturn=Retorno
 setReturnDescription=Função para incluir um "return" no código.
+setTokenExpiration=Definir Expiração do Token
+setTokenExpirationDescription=Função para definir data de expiração do token da requisição
+setTokenExpirationParam=Data de Expiração: data de expiração do token
 SEVERE=Erro
 shellExecuteDescription=Função que executa uma linha de comando e retorna caso haja erro
 shellExecuteName=Executa linha de comando
@@ -947,17 +967,3 @@ year=Ano
 yearsToIncrement=Anos a incrementar
 yes=Sim
 zipFile=Compactar arquivo
-getTokenClaim=Obter Variável do Token da Requisição
-getTokenClaimDescription=Permite obter informações do Token da Requisiçao, passando uma chave
-getTokenClaimKey=Chave
-getTokenClaims=Obter Mapa de Dados do Token da Requisição
-getTokenClaimsDescription=Função para obter Mapa de Dados do Token da Requisição
-addTokenClaim=Definir Variável de Token da Requisição
-addTokenClaimDescription=Função que adiciona Dados ao Token da Requisição.
-addTokenClaimKey=Chave
-addTokenClaimValue=Valor
-getTokenExpiration=Obter Expiração do Token
-getTokenExpirationDescription=Obtém data de expiração do Token da Requisição
-setTokenExpiration=Definir Expiração do Token
-setTokenExpirationDescription=Função para definir data de expiração do token da requisição
-setTokenExpirationParam=Data de Expiração: data de expiração do token
