--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -419,6 +419,8 @@ generateReport=Gerar Relatório
 generateReportDescription=Função para gerar arquivo do relatório na pasta desejada.
 generateUUIDDescription=Função que cria um identificador universal (UUID) e retorna como texto
 generateUUIDName= Cria identificador universal
+getApplicationId=Obter Id da Aplicação
+getApplicationIdDescription=Retorna o Id Único da aplicação corrente
 getCountTotalElementsDescription=Função que obtém a quantidade de registros da fonte de dados com os filtros aplicados
 getCountTotalElementsName=Quantidade de registros
 getCurrentUserName=Obter login do usuário logado
