--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -412,6 +412,8 @@ generateKeys=Generate Keys
 generateKeysDescription=Generates public and private keys
 generateReport=Generate report
 generateReportDescription=Function to generate report file in the desired folder.
+generateReportWithJsonContent=Generate report with content
+generateReportWithParam=Generate report with parameters
 generateUUIDDescription=Function that generate an universal identifier (UUID) and return as String
 generateUUIDName= Generate universal identifier
 getCountTotalElementsDescription=Function that get the number of records from datasource with applied filters
@@ -709,6 +711,7 @@ removeFile=Remove file
 removeFolderFiles=Remove files folder
 renameFile=Rename file
 report=Report
+reportContent=Report content
 return=Return
 returnClass=Return class
 rollbackTransaction=Rollback Transaction
