--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -411,6 +411,8 @@ generateKeys=Gerar chaves
 generateKeysDescription=Gerar chaves publicas e privadas
 generateReport=Gerar Relatório
 generateReportDescription=Função para gerar arquivo do relatório na pasta desejada.
+generateReportWithJsonContent=Gerar Relatório com conteúdo
+generateReportWithParam=Gerar Relatório com parâmetros
 generateUUIDDescription=Função que cria um identificador universal (UUID) e retorna como texto
 generateUUIDName= Cria identificador universal
 getCountTotalElementsDescription=Função que obtém a quantidade de registros da fonte de dados com os filtros aplicados
