CRONAPP-2870 Adaptacao das funcoes de gerar relatorio para customizacao

--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -707,6 +707,7 @@ removeFile=Remover arquivo
 removeFolderFiles=Remover pasta de arquivos
 renameFile=Renomear arquivo
 report=Relatório
+reportContent=Conteúdo do relatório
 return=Retorno
 returnClass=Classe de retorno
 rollbackTransaction=Rollback da Transação
