CRONAPP-2870 Adaptacao das funcoes de gerar relatorio para customizacao (#182)
[Melhoria]:
Funcao para gerar relatorio no bloco com parametros, e gerar passando o conteudo em json do .report
[Solução]:
Foi mantida a funcao antiga e criada 2 novas funcoes.

Gerar Relatorio: com parametros do relatorio e tipo (pdf, html);
Gerar relatorio com conteudo: os mesmo parametros da anterior mais recebendo o json do .report e não mais o arquivo fisico.

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -418,6 +418,8 @@ generateKeys=Generate Keys
 generateKeysDescription=Generates public and private keys
 generateReport=Generate report
 generateReportDescription=Function to generate report file in the desired folder.
+generateReportWithJsonContent=Generate report with content
+generateReportWithParam=Generate report with parameters
 generateUUIDDescription=Function that generate an universal identifier (UUID) and return as String
 generateUUIDName= Generate universal identifier
 getApplicationId=Get Application Id
@@ -726,6 +728,7 @@ removeFile=Remove file
 removeFolderFiles=Remove files folder
 renameFile=Rename file
 report=Report
+reportContent=Report content
 return=Return
 returnClass=Return class
 rollbackTransaction=Rollback Transaction
