--- a/src/main/java/cronapi/i18n/Messages_pt_BR.properties
+++ b/src/main/java/cronapi/i18n/Messages_pt_BR.properties
@@ -417,6 +417,8 @@ generateKeys=Gerar chaves
 generateKeysDescription=Gerar chaves publicas e privadas
 generateReport=Gerar Relatório
 generateReportDescription=Função para gerar arquivo do relatório na pasta desejada.
+generateReportWithJsonContent=Gerar Relatório com conteúdo
+generateReportWithParam=Gerar Relatório com parâmetros
 generateUUIDDescription=Função que cria um identificador universal (UUID) e retorna como texto
 generateUUIDName= Cria identificador universal
 getApplicationId=Obter Id da Aplicação
@@ -722,6 +724,7 @@ removeFile=Remover arquivo
 removeFolderFiles=Remover pasta de arquivos
 renameFile=Renomear arquivo
 report=Relatório
+reportContent=Conteúdo do relatório
 return=Retorno
 returnClass=Classe de retorno
 rollbackTransaction=Rollback da Transação
