CRONAPP-3310 - Criptografar chave do Cloud Services Storage

--- a/src/main/java/cronapi/i18n/Messages_en_US.properties
+++ b/src/main/java/cronapi/i18n/Messages_en_US.properties
@@ -1,3 +1,11 @@
+encryptName=Encrypt
+encryptDescription=Function that encrypts a text or byte array based on a key 
+encryptMessage=Value to be encrypted
+encryptKey=Encryption key
+decryptName=Decrypt
+decryptDescription=Function that decrypt a text or byte array based on a key
+decryptMessage=Value to be decrypted 
+decryptKey=Encryption key
 absFunctionDescription=Function that return the absolute value
 absFunctionName=Return the absolute value
 absFunctionParam0=Value to be calculate: Value base to be calculate the absolute value
